# async-api-demo

./: .gitignore  Makefile  README.md  docker-compose.yml  justfile
connect/: pipeline.yaml
consumer/: Dockerfile  pyproject.toml
consumer/app/: __init__.py  cli.py  main.py  models.py
docs/: asyncapi-consumer.yaml  asyncapi-producer.yaml
localstack/: init-aws.sh
producer/: Dockerfile  pyproject.toml
producer/app/: __init__.py  cli.py  generator.py  main.py  models.py
schemas/: order_accepted.avsc  order_created.avsc  order_delivered.avsc  order_shipped.avsc
scripts/: generate_asyncapi.py
