[project]
name = "order-consumer"
version = "1.0.0"
description = "Order Fulfillment Consumer Service"
requires-python = ">=3.12"
dependencies = [
    "faststream[kafka,cli]>=0.6.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.scripts]
consumer = "app.cli:cli"

[tool.uv]
dev-dependencies = []

